[tool.poetry]
name = "multilabel-text-classfication"
version = "0.1.0"
description = ""
authors = ["yugant10-commits <yugantghimire12345@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
Sphinx = "^5.1.1"
coverage = "^6.4.3"
flake8 = "^5.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
